[package]
name = "repoguard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.3", features = ["derive", "env", "cargo"] }
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["server", "http1", "tokio"] }
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
log = "0.4.21"
octocrab = "0.38.0"
prometheus = "0.13.3"
serde = { version = "1.0.197", features = ["derive", "alloc", "rc"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
simple_logger = "5.0.0"
tokio = { version = "1.36.0", features = ["time", "rt", "macros"] }